corrected dark mode

--- a/src/app/lista/lista.page.scss
+++ b/src/app/lista/lista.page.scss
@@ -3,9 +3,7 @@ ion-header ion-toolbar:first-of-type {
 }
 
 ion-button{
-    --background:white;
+    --background:transparent;
     --color:black;
     --box-shadow:none;
   }
-  
-
